[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kycaml"
version = "0.1.1"
description = "Defensive KYC/AML toolkit: fraud/AML threat taxonomy, provider catalog, and a streamlined provider-orchestration layer. For building KYC/AML controls, not evading them."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "LicenseRef-COCL-1.0" }
authors = [{ name = "Cognis Digital" }]
keywords = ["kyc", "aml", "compliance", "anti-fraud", "fraud-detection",
            "sanctions-screening", "transaction-monitoring", "regtech",
            "identity-verification", "fatf", "financial-crime"]

[project.scripts]
"kycaml-emit" = "kycaml.connect:emit_main"
kycaml = "kycaml.cli:main"

[project.urls]
Homepage = "https://github.com/cognis-digital/kycaml"

[tool.hatch.build.targets.wheel]
packages = ["kycaml"]

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
